[package]
name = "mpl-bubblegum"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = [ "init-if-needed" ] }
anchor-spl = { version = "0.25.0" }
spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.5", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
gummyroll = { git = "https://github.com/jarry-xiao/candyland.git", features = ["cpi"] }
bytemuck = "1.8.0"

[dev-dependencies]
solana-program-test = "1.9.13"
solana-program = "1.9.13"
solana-sdk = "1.9.13"

[profile.release]
overflow-checks = true
